# rust-multi-platform-uniffi-lib

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  models.rs
src/models/: responses.rs  types.rs
src/services/: persistence.rs  repository.rs
