[package]
name = "rust-multi-platform-uniffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "rust_multi_platform_uniffi"

[dependencies]
uniffi = { version = "0.25.3" }
ureq = {version = "2.9.1", features = ["json"]}
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
